# git_actions

./: ci.yaml  pyproject.toml
app/: __init__.py  calc.py
tests/: Untitled-1.ipynb  test_soma.py
